--- a/appspec.yml
+++ b/appspec.yml
@@ -3,12 +3,12 @@ os: linux
 files:
  - source: .
    destination: /home/ec2-user/node-test
-hooks:
-  AfterInstall:
-   - location: scripts/install_app_dependencies
-     timeout: 300
-     runas: root
-  ApplicationStart:
-   - location: scripts/start_server
-     timeout: 300
-     runas: root
+# hooks:
+#   AfterInstall:
+#    - location: scripts/install_app_dependencies
+#      timeout: 300
+#      runas: root
+#   ApplicationStart:
+#    - location: scripts/start_server
+#      timeout: 300
+#      runas: root
