--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
  - source: .
-   destination: /home/ec2-user/node-test
+   destination: /var/www/html/node-test
 # hooks:
 #   AfterInstall:
 #    - location: scripts/install_app_dependencies
