--- a/appspec.yml
+++ b/appspec.yml
@@ -1,14 +1,23 @@
 version: 0.0
 os: linux
 files:
- - source: .
-   destination: /home/ec2-user/app
-# hooks:
-#   AfterInstall:
-#    - location: scripts/install_app_dependencies
-#      timeout: 300
-#      runas: root
-#   ApplicationStart:
-#    - location: scripts/start_server
-#      timeout: 300
-#      runas: root
+  - source: /
+    destination: /var/www/html/node-test-task
+#hooks:
+  #BeforeInstall:
+   # - location: scripts/install_dependencies.sh
+    #  timeout: 300
+     # runas: root
+ # AfterInstall:
+  #  - location: scripts/change_permissions.sh
+   #   timeout: 300
+    #  runas: root
+ # ApplicationStart:
+  #  - location: scripts/start_server.sh
+   # - location: scripts/create_test_db.sh
+    #  timeout: 300
+    #  runas: root
+ # ApplicationStop:
+  #  - location: scripts/stop_server.sh
+   #   timeout: 300
+    #  runas: root
