--- a/appspec.yml
+++ b/appspec.yml
@@ -3,21 +3,21 @@ os: linux
 files:
   - source: /
     destination: /var/www/html/node-test-task
-#hooks:
-  #BeforeInstall:
-   # - location: scripts/install_dependencies.sh
-    #  timeout: 300
-     # runas: root
- # AfterInstall:
+hooks:
+  BeforeInstall:
+  #  - location: scripts/install_dependencies.sh
+  #    timeout: 300
+  #    runas: root
+ AfterInstall:
   #  - location: scripts/change_permissions.sh
-   #   timeout: 300
-    #  runas: root
- # ApplicationStart:
+  #    timeout: 300
+  #    runas: root
+ ApplicationStart:
   #  - location: scripts/start_server.sh
-   # - location: scripts/create_test_db.sh
-    #  timeout: 300
-    #  runas: root
- # ApplicationStop:
+  #  - location: scripts/create_test_db.sh
+  #    timeout: 300
+  #    runas: root
+ ApplicationStop:
   #  - location: scripts/stop_server.sh
-   #   timeout: 300
-    #  runas: root
+  #    timeout: 300
+  #    runas: root
